--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.3.18",
     "prop-types": "^15.8.1",
     "razorpay": "^2.9.4",
